/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package products;

/**
 *
 * @author Weriko
 */
public class Americano implements ICafe{
    public String hacerCafe(){
        return "Me hago un americano";
    }
    
}
